--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -7,93 +7,43 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-self: center;
-    margin:0 auto;
+    margin: 0 auto;
     height: 90vh;
     background-color: #141414;
     z-index: 1;
     width: 100%;
-    max-width:  1300px;
+    max-width: 1300px;
     padding: 0 50px;
 }
 
 .main__content h1{
     font-size: 4rem;
     background-color: #4e54b5;
-    background-image: linear-gradient(to top, #7f7491 0% , #340de2 100%);
+    background-image: linear-gradient(to top, #7f7491 0%, #340de2 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-filler-color: transparent;
+    text-align: center; /* Center align the h1 element */
 }
 
 .main__content h2{
     font-size: 3rem;
     background-color: #4e54b5;
-    background-image:linear-gradient(to top, #0e65f0 0% , #07fe55 100%) ;
+    background-image: linear-gradient(to top, #0e65f0 0%, #07fe55 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-filler-color: transparent;
+    text-align: center; /* Center align the h2 element */
 }
 
 .main__content p{
-    margin-top: 1rem;
+    margin-top: 2rem;
     font-size: 2rem;
     font-weight: 700;
-    color: #fff
-}
-
-.main__btn {
-    font-size: 1rem;
-    background-image: linear-gradient(to top, #7f7491 0% , #340de2 100%);
-    padding: 14px 32px;
-    border: none;
-    border-radius: 4px;
     color: #fff;
-    margin-top: 2rem;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.35s;
-    outline: none;
-
+    text-align: center; /* Center align the p element */
 }
-
-.main__btn a {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-    text-decoration: none;
-}
-
-.main__btn:after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: #8dd028;
-    transition: all 0.35s;
-    border-radius: 4px;
-}
-
-.main__btn:hover {
-    color: #fff;
-}
-
-.main__btn:hover:after {
-    width: 100%;
-}
-
-.main__img--conrainer {
-    text-align: center;
-}
-
-#main__img {
-    height: 80%;
-    width: 80%;
-}
-
-
